apps/mediamanager/manifests/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mediamanager
  namespace: mediamanager
spec:
  selector:
    app: mediamanager
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
