apps/mediamanager/manifests/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mediamanager
  namespace: mediamanager
spec:
  rules:
    - host: mediamanager.torsteinbo.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mediamanager
                port:
                  number: 8000
